--- a/Documents/CLASES POLI/PRUEBAS Y GESTIÓN DE LA CONFIGURACIÓN/PruebasGr6/build.gradle
+++ b/Documents/CLASES POLI/PRUEBAS Y GESTIÓN DE LA CONFIGURACIÓN/PruebasGr6/build.gradle
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
     testImplementation group: 'junit',name: 'junit', version: '4.12'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-all
+    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
 }
