--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: app-courses
+    name: app-backlog
   profiles:
-    active: prod
+    active: dev
 server:
   servlet:
-    context-path: /todo_courses/v1
+    context-path: /todo_backlog/v1
   port: 9050
