--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,16 +1,24 @@
 spring:
   datasource:
-    driver-class-name: org.h2.Driver
+    url: "jdbc:h2:mem:backlog;DB_CLOSE_ON_EXIT=FALSE"
     username: sa
     password: sa
-    url: "jdbc:h2:mem:backlogapp;"
+    driver-class-name: org.h2.Driver
+
   h2:
     console:
-      enabled: true
+      enable: true
+      path: /h2-console
+
   jpa:
     show-sql: true
     database-platform: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: true
     hibernate:
       ddl-auto: create-drop
+  server:
+    servlet:
+      context-path: /todo_backlog/v1
+    port: 9050
+
 
