--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: app-backlog
   profiles:
-    active: prod
+    active: dev
 server:
   servlet:
     context-path: /todo_backlog/v1
